# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  launcher.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  vars_const.py
brain_games/scripts/games/: brain-gcd.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  launcher.py  prime.py  progression.py
braingames/: cli.py
braingames/scripts/: brain_even.py  brain_games.py  vars_const.py
hexlet_games/: cli.py  launcher.py
hexlet_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
hexlet_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
