[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "braingames" },
]

[tool.poetry.scripts]
brain-games = "braingames.scripts.brain_games:main"
brain-even = "braingames.scripts.brain_even:main"

[tool.poetry.dependencies]
python = "^3.10.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
