[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.braingames:main"
brain-even = "brain_games.scripts.games.brain_even:start"
brain-calc = "brain_games.scripts.games.brain_calc:start"
brain-gcd = "brain_games.scripts.games.brain_gcd:start"
brain-progression = "brain_games.scripts.games.brain_progression:start"

[tool.poetry.dependencies]
python = "^3.10.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
